--- a/Connect from Python to MS SQL & Postgresql.ipynb
+++ b/Connect from Python to MS SQL & Postgresql.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = \"SELECT TOP 20 * FROM tablez\""
+    "task = \"SELECT TOP 20 * FROM table\""
    ]
   },
   {
@@ -59,7 +59,7 @@
     "try:\n",
     "    connection = psycopg2.connect(user = \"<USERNAME>\",\n",
     "                                  password = \"<PASSWORD>\",\n",
-    "                                  host = \"<>SERVER\",\n",
+    "                                  host = \"<SERVER>\",\n",
     "                                  port = \"5432\",\n",
     "                                  database = \"<NAME OF THE DATABASE>\")\n",
     "    cursor = connection.cursor()\n",
